--- a/src/diff_bot/package.xml
+++ b/src/diff_bot/package.xml
@@ -12,6 +12,7 @@
   <depend>xacro</depend>
   <depend>robot_state_publisher</depend>
   <depend>ros_gz_bridge</depend>
+  <depend>ros_gz_sim</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
