--- a/src/diff_bot/CMakeLists.txt
+++ b/src/diff_bot/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(xacro REQUIRED)
 find_package(robot_state_publisher REQUIRED)
 find_package(ros_gz_bridge REQUIRED)
 find_package(ros_gz_sim REQUIRED)
+find_package(rviz2)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
