--- a/src/diff_bot/package.xml
+++ b/src/diff_bot/package.xml
@@ -13,6 +13,7 @@
   <depend>robot_state_publisher</depend>
   <depend>ros_gz_bridge</depend>
   <depend>ros_gz_sim</depend>
+  <depend>rviz2</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
