--- a/src/diff_bot/conf/ros_gz_bridge.yaml
+++ b/src/diff_bot/conf/ros_gz_bridge.yaml
@@ -19,8 +19,8 @@
   direction: ROS_TO_GZ
 
 # gz topic published by JointState topic
-- ros_topic_name: "joint_state"
-  gz_topic_name: "joint_state"
+- ros_topic_name: "joint_states"
+  gz_topic_name: "joint_states"
   ros_type_name: "sensor_msgs/msg/JointState"
   gz_type_name: "gz.msgs.Model"
   direction: GZ_TO_ROS
